2019/Homepage/index.css
#faq .card span {
    color: black;
    margin-left: 10px
}

.card-title {
    text-decoration: none !important;
}
.float-left {
    float: left;
}
.float-right {
    float: right;
    margin-left: auto
}

body {
    overflow-x: hidden
}
.my-nav {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}
.banner-container {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.banner {
    max-width: 20vw;
}

.color-e05555 {
    color: #e05555;
}
.color-e5b85e {
    color: #e5b85e;
}
.about {
    padding-bottom: 75px;
}

.about h2 {
    margin: 0 auto;
    padding-top: 90px;
    padding-bottom: 40px;
    text-align: center;
}

.about p {
    padding-top: 20px;
    font-size: 16px;
    width: 530px;
    max-width: 90%;
    margin: 0 auto;
}

.horizontal-center {
    margin-left: auto;
}

.light-cyan{
    background-color: #F0F8FF;
}

.bigger-h1 h1 {
    font-size: 300%
}

.card-title {
    background-color: #F5F5F5;
    border-color: #ddd;
}

#schedule-title {
    text-align: center;
    padding-bottom: 40px;
}

table.day-schedule {
    width: 100%;
    border-collapse: separate;
    border-spacing: 2px;
    margin-bottom: 40px;
}

table.day-schedule tr:nth-child(odd) {
    background-color: #f5f5f5;
}

table.day-schedule tr:nth-child(even) {
    background-color: #fefefe;
}

table.day-schedule tr td:nth-child(1) {
    text-align: center;
}

table.day-schedule tr td, table.day-schedule tr th {
    padding: 10px 10px;
}

table.day-schedule tr td {
    font-size: 14px;
}

table.day-schedule tr th {
    background-color: #e9e9e9;
    text-align: center;
    font-size: 16px;
}

table.day-schedule tr.day th {
    font-size: 20px;
}

.empty-div {
    height:100px; 
    width:100%; 
    clear:both;
}

.hover-color-change {
    color: rgba(255,255,255,.5);
}

.hover-color-change:hover {
    color: rgba(255,255,255,.8);
}

